# OmniAgePy

./: .gitignore  README.md  pyproject.toml
notebooks/: tutorial.ipynb
src/omniage/: __init__.py  predict.py  utils.py
src/omniage/data/: ABEC.csv  AdaptAge.csv  Bernabeu_Linear.csv  Bernabeu_Means.csv  Bohlin_GA.csv  CausalAge.csv  CentenarianClock_100.csv  CentenarianClock_40.csv  CompCHIP_ASXL1.csv  CompCHIP_AnyCHIP.csv  CompCHIP_DNMT3A.csv  CompCHIP_TET2.csv  CompCRP_CRP.csv  CompCRP_intCRP.csv  CompIL6.csv  CompSmokeIndex.csv  CorticalClock.csv  DNAmFitAge_Female_Medians.csv  DNAmFitAge_Male_Medians.csv  DNAmFitAge_SubModels.csv  DNAmTL.csv  DamAge.csv  DunedinPACE.csv  DunedinPACE_GoldStandard.csv  EPIC_GA.csv  EpiCMIT.csv  EpiScores_ALL.csv  EpiScores_All.csv  Garagnani.csv  GrimAge1_Coefs.csv  GrimAge1_Gold.csv  GrimAge2_Coefs.csv  GrimAge2_Gold.csv  Hannum.csv  HepatoXu.csv  Horvath2013.csv  Horvath2018.csv  HypoClock.csv  IC_Clock.csv  IntrinClock.csv  (+29 more)
src/omniage/data/CTS/: Brain.csv  Glia-In.csv  Glia-Sin.csv  Hep.csv  Liver.csv  Neu-In.csv  Neu-Sin.csv
src/omniage/data/EnsembleAge/: EnsembleAge_Dynamic_Bmal1_KO:Blood_20_coefs.csv  EnsembleAge_Dynamic_Bmal1_KO:Brain_20_coefs.csv  EnsembleAge_Dynamic_Bmal1_KO:Cerebellum_20_coefs.csv  EnsembleAge_Dynamic_Bmal1_KO:Cortex_20_coefs.csv  EnsembleAge_Dynamic_HighFat_Diet_11_coefs.csv  (+47 more)
src/omniage/models/: SurrogateBiomarkers.py  __init__.py  base.py  cts_clocks.py  disease_risk.py  dnam_ctf_clock.py  ensemble.py  gestational.py  linear_clocks.py  pan_mammalian.py  pc_clocks.py  systems_age.py  transcriptomic.py
(+29 files in other folders)
